# bevy-mixamo

./: Cargo.toml  README.md  TODO.md
assets/animations/: Breathing Idle.fbx  Breathing Idle.glb
assets/characters/: mutant.json
src/: asset_event_bridge.rs  dropdown.rs  main.rs
