[package]
name = "bevy-mixamo"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", features = ["bevy_remote", "dynamic_linking"] }
bevy_common_assets = { version = "0.15", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
